--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <p><t>Digital Wellbeing Serious Game (MSc Artefact Serious Game)</t><br/>
           Supervised Work
-          <br/><i>Completed as an own exercise with the Godot4 game engine. <a href="https://josh-scg.itch.io"><i>(Source Code)</i></a></i>
+          <br/><i>Completed as an own exercise with the Godot4 game engine. <a href="https://github.com/Josh-SCG/Masters_Game_Development"><i>(Source Code)</i></a></i>
          </p>
             <iframe frameborder="0" src="https://itch.io/embed/2250606?border_width=0&amp;bg_color=180720&amp;fg_color=1db5bc&amp;border_color=180720" width="650" height="170"><a href="https://josh-scg.itch.io/digital-wellbeing-serious-game">Digital Wellbeing Serious Game by Josh-SCG</a></iframe>
   
