--- a/gallery.html
+++ b/gallery.html
@@ -27,7 +27,7 @@
       <script src="js/html5shiv.js"></script>
       <script src="js/respond.min.js"></script>
     <![endif]-->
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
  </head>
  <body>
 
@@ -127,6 +127,7 @@
             <!-- EDIT: Social Links. Replace # with your URL for each -->
             <a href="https://twitter.com/JabsJabiru"><i class="icon-twitter"></i></a>
             <a href="https://github.com/Josh-SCG"><i class="icon-github"></i></a>
+            <a href="https://josh-scg.itch.io"><i class="fab fa-itch-io"></i></a>
           </p>
         </div>
       </div><!--/.row -->
